end of lesson 10

--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,11 @@
+Options -Indexes
+
 RewriteEngine On
 RewriteBase /
-#RewriteRule ^product/(\d+)/?$ product.php?product=$1
-RewriteRule ^product/([-a-z0-9]+)$ product.php?product=$1
-RewriteRule ^category/(\d+) ?category=$1 [QSA]
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule .* index.php
+
+#RewriteRule ^product/([-a-z0-9]+)$ product.php?product=$1
+#RewriteRule ^category/(\d+) ?category=$1 [QSA]
